<resources>
    <string name="app_name">MiniMezun</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Logout</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="year_of_entry">year of entry</string>
    <string name="year_of_enrollment">year of enrollment</string>
    <string name="graduation_year">graduation year</string>
    <string name="year_of_graduation">year of graduation</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="profile_page">Profile Page</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="profile_details">Profile Details</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="change_profile">Change Profile</string>
    <string name="save">Save</string>
    <string name="take_picture_from_camera">Take Picture</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="bachelors">Bachelor\'s Degree</string>
    <string name="masters">Master\'s Degree</string>
    <string name="doctorate">Doctorate</string>
    <string name="country">Company\'s Country</string>
    <string name="city">Company\'s City</string>
    <string name="company">Company Name</string>
    <string name="social_media_link1">Social Media Link 1</string>
    <string name="social_media_link2">Social Media Link 2</string>
    <string name="phone_number">Phone Number</string>
    <string name="all_profiles">All Profiles</string>
</resources>