<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"

        android:text="Mezun Uygulamasına Hoşgeldiniz" />

    <Space
        android:layout_height="32dp"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/all_profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        android:text="@string/all_profiles" />

    <Space
        android:layout_height="16dp"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/profile_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        android:text="@string/profile_page" />

    <Space
        android:layout_height="16dp"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        android:text="@string/logout" />

</LinearLayout>
